# TriLib

./: CMakeLists.txt  README.md  Tests.cpp
include/TriLib/: TriLib.hpp
include/TriLib/util/: NamespaceUtil.hpp  SSEUtil.hpp  TemplateUtil.hpp
include/TriLib/vector/: Base_Vector.hpp  Vector.hpp  vec1.hpp  vec2.hpp  vec3.hpp  vec4.hpp
trilib/: Tests.cpp
trilib/include/TriLib/vector/: Vector.hpp
